--- a/BACKEND-ROOM-NODEJS/package.json
+++ b/BACKEND-ROOM-NODEJS/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.1",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.9.3"
+    "nodemailer": "^6.9.3",
+    "path": "^0.12.7",
+    "uuid": "^9.0.0" 
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
