--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -31,7 +31,8 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
+              "src/theme.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss",
               "src/assets/styles/style.scss"
             ],
